# quarkGL

./: .gitignore  AGENTS.md  AGENTS_SHADER.md  CMakeLists.txt  CMakePresets.json
cmake/: Dep_ABSL.cmake  Dep_ASSIMP.cmake  Dep_GLAD.cmake  Dep_GLFW.cmake  Dep_GLM.cmake  Dep_IMGUI.cmake  Dep_IMGUIZMO_QUAT.cmake  Dep_STB.cmake  Dependencies.cmake
examples/: CMakeLists.txt  bloom.cc  compute.cc  deferred.cc  geom_shader.cc  hdr.cc  instancing.cc  normal_map.cc  pbr.cc  post_processing.cc  shadow_map.cc  ssao.cc
examples/shaders/: bloom.frag  bloom_lamp.frag  bloom_screen.frag  compute.comp  deferred_lighting.frag  deferred_lighting_ssao.frag  explode.geom  gbuffer.frag  hdr.frag  instancing.vert  normal_map.frag  normal_map.vert  pbr.frag  phong.frag  shadow_map.frag  shadow_map.vert
model_render/: BUILD  CMakeLists.txt  model_render.cc  spherical_harmonics.cc  spherical_harmonics.h
model_render/shaders/: gbuffer_vis.frag  lighting_pass.frag  model.vert  model_normals.geom  post_processing.frag
quarkgl/: .clang-format  BUILD  CMakeLists.txt  aa.cc  aa.h  bloom.cc  bloom.h  blur.cc  blur.h  camera.cc  camera.h  core.cc  cubemap.cc  cubemap.h  debug.cc  debug.h  deferred.cc  deferred.h  exceptions.cc  exceptions.h  framebuffer.cc  framebuffer.h  ibl.cc  ibl.h  light.cc  light.h  mesh.cc  mesh.h  mesh_primitives.cc  mesh_primitives.h  model.cc  model.h  quarkgl.h  random.cc  random.h  screen.h  shader.cc  shader.h  shader_compiler.cc  shader_compiler.h  (+20 more)
quarkgl/shaders/: constants.glsl  core.glsl  debug.geom  depth.frag  gamma.frag  lighting.frag  normals.frag  pbr.frag  pbr_sampling.glsl  phong.frag  post_processing.frag  random.glsl  standard_lights.frag  standard_lights_pbr.frag  standard_lights_phong.frag  tone_mapping.frag  transforms.glsl  window.frag
quarkgl/shaders/builtin/: bloom_downsample.frag  bloom_upsample.frag  cubemap.vert  deferred.frag  deferred.vert  equirect_cubemap.frag  fxaa.frag  gaussian_blur.frag  ggx_brdf_integration.frag  ggx_prefilter_cubemap.frag  irradiance_cubemap.frag  screen_quad.frag  screen_quad.vert  screen_quad_lod.frag  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag
